lox.ebnf
program ::= declaration* EOF ;

declaration ::= varDecl | statement ;

varDecl ::= "var" IDENTIFIER ( "=" expression )? ";" ;

statement ::= exprStmt
            | ifStmt
            | whileStmt
            | printStmt 
            | quitStmt
            | delStmt
            | block ;

block ::= "{" declaration* "}" ;

exprStmt    :: = expression ";" ;
ifStmt      ::= "if" "(" expression ")" statement ( "else" statement )? ;
whileStmt   ::= "while" "(" expression ")" statement ;
forStmt     ::= "for" "(" ( varDecl | exprStmt | ";" ) expression? ";" expression? ")" statement ;

printStmt   ::= "print" expression ";" ;
quitStmt    ::= "quit" NUMBER ";" ;
delStmt     ::= "del" IDENTIFIER ";" ;

expression     → assignment ;
assignment     → IDENTIFIER "=" assignment
               | logic_or ;
logic_or       → logic_and ( "or" logic_and )* ;
logic_and      → equality ( "and" equality )* ;
equality    ::= comparison ( ( "!=" | "==" ) comparison )* ;
comparison  ::= term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term        ::= factor ( ( "-" | "+" ) factor )* ;
factor      ::= unary ( ( "/" | "*" ) unary )* ;
unary       ::= ( "!" | "-" ) unary
               | primary ;
primary     ::= NUMBER | STRING | "true" | "false" | "nil"
               | "(" expression ")" | IDENTIFIER ;
